<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="fi.iki.murgo.iltasoitto.app.HarjuMainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"/>

    <RelativeLayout
            android:id="@+id/content_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pref_credits"
                android:id="@+id/credits"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/accent_material_dark"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:gravity="center|top"
                    android:layout_marginTop="25sp"
                    android:baselineAligned="true"
                    android:weightSum="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/pref_title_active"
                        android:id="@+id/active"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="bottom"
                        />

                <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/harjuToggle"
                        />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volume_label"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF"
                        android:layout_marginEnd="8dp"/>

                <SeekBar
                        android:id="@+id/volume_slider"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="100"
                        android:progress="100"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/notification_warning_card"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_warning_card"
                    android:padding="12dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_warning"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF"/>

            </LinearLayout>

            <TextView
                    android:id="@+id/silent_mode_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/silent_mode_note"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#99FFFFFF"
                    android:textStyle="italic"
                    android:gravity="center"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                <ImageView
                        android:id="@+id/logo"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="logo"/>

                <Button
                        android:id="@+id/play_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/play_button_play"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
